tdf#162822: Revert "tdf#152336 Detect charset... (24.8 only)

... and separators for csv files"

This reverts commit 2feda8ba21acdcf33a9b4ba94742f574c17839bd.

See discussion in tdf#162822

Change-Id: I585edfd3318961fb4d6a45a8cab8d00da4ae3fd8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172964
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Gabriel Masei <gabriel.masei@libreoffice.org>
Reviewed-by: Gabriel Masei <gabriel.masei@libreoffice.org>