include/sfx2/objsh.hxx
@@ -45,8 +45,6 @@
 #include <functional>
 #include <sfx2/AccessibilityIssue.hxx>
 
-#include <unotools/ucbstreamhelper.hxx>
-
 namespace weld {class Button; }
 namespace model {class ColorSet; }
 struct NamedColor;
@@ -445,10 +443,6 @@ public:
     const css::uno::Sequence< css::beans::PropertyValue >& GetModifyPasswordInfo() const;
     bool                        SetModifyPasswordInfo( const css::uno::Sequence< css::beans::PropertyValue >& aInfo );
 
-    static void                 DetectCharSet(SvStream& stream, rtl_TextEncoding& eCharSet, SvStreamEndian& endian);
-    static void                 DetectCsvSeparators(SvStream& stream, rtl_TextEncoding& eCharSet, OUString& separators, sal_Unicode cStringDelimiter);
-    static void                 DetectCsvFilterOptions(SvStream& stream, OUString& aFilterOptions);
-    static void                 DetectFilterOptions(SfxMedium* pMedium);
     static ErrCode              HandleFilter( SfxMedium* pMedium, SfxObjectShell const * pDoc );
 
     virtual bool                PrepareClose(bool bUI = true);
