sc/inc/scabstdlg.hxx
@@ -418,8 +418,7 @@ public:
     virtual     VclPtr<AbstractScImportAsciiDlg> CreateScImportAsciiDlg(weld::Window* pParent,
                                                                     const OUString& aDatName,
                                                                     SvStream* pInStream,
-                                                                    ScImportAsciiCall eCall,
-                                                                    ScAsciiOptions* aOptions = nullptr) = 0;
+                                                                    ScImportAsciiCall eCall) = 0;
 
     virtual     VclPtr<AbstractScTextImportOptionsDlg> CreateScTextImportOptionsDlg(weld::Window* pParent) = 0;
 
