sc/source/ui/attrdlg/scdlgfact.hxx
@@ -664,8 +664,7 @@ public:
     virtual VclPtr<AbstractScImportAsciiDlg> CreateScImportAsciiDlg(weld::Window* pParent,
                                                                     const OUString& aDatName,
                                                                     SvStream* pInStream,
-                                                                    ScImportAsciiCall eCall,
-                                                                    ScAsciiOptions* aOptions = nullptr) override;
+                                                                    ScImportAsciiCall eCall) override;
 
     virtual VclPtr<AbstractScTextImportOptionsDlg> CreateScTextImportOptionsDlg(weld::Window* pParent) override;
 
